namespace BE
{
    public enum EstadoVino
    {
        Activo,
        Descontinuado
    }
}
