namespace BE
{
    public enum TipoMovimiento
    {
        Entrada,
        Salida
    }
}
