@startuml DiagramaClases_CatalogoStock

title Diagrama de Clases — Gestión de Catálogo y Stock de Vinos

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam roundcorner 6
skinparam linetype ortho
hide empty members
scale 0.7

package "BE" #FEFECE {

  enum EstadoVino {
    Activo
    Descontinuado
  }

  enum TipoMovimiento {
    Entrada
    Salida
  }

  class Vino {
    + Id : int
    + Codigo : string
    + Nombre : string
    + BodegaId : int
    + Varietal : string
    + Aniada : int
    + Precio : decimal
    + StockMinimo : int
    + Estado : EstadoVino
    + Maridaje : string
    + Puntaje : int?
    + CreadoPor : int
    + FechaAlta : DateTime
    + AutorizadoPor : int?
    + FechaAutorizacion : DateTime?
    + BajaSolicitadaPor : int?
    + FechaSolicitudBaja : DateTime?
    + DescontinuadoPor : int?
    + FechaDescontinuacion : DateTime?
  }

  class Bodega {
    + Id : int
    + Nombre : string
    + Pais : string
    + Region : string
    + Habilitado : bool
  }

  class MovimientoStock {
    + Id : int
    + VinoId : int
    + Fecha : DateTime
    + Tipo : TipoMovimiento
    + Cantidad : int
    + Motivo : string
    + Responsable : string
    + ReferenciaTipo : string
    + ReferenciaId : int?
  }

  Vino "1" o-- "0..*" MovimientoStock
  Vino --> EstadoVino
  Vino --> Bodega : BodegaId >
  MovimientoStock --> TipoMovimiento
}

' ─────────────────────────────────────────
' CAPA BLL
' ─────────────────────────────────────────
package "BLL" #E8F4E8 {

  class VinoBLL {
    - _dal : VinoDAL
    + Proponer(vino : Vino, propuestoPorId : int) : bool
    + Autorizar(vinoId : int, administradorId : int) : void
    + SolicitarBaja(vinoId : int, solicitanteId : int) : void
    + AutorizarBaja(vinoId : int, administradorId : int) : void
    + ListarCatalogoPublicado() : List<Vino>
    + ListarPendientes() : List<Vino>
    + ListarPendientesDeBaja() : List<Vino>
  }

  class BodegaBLL {
    - _dal : BodegaDAL
    + ListarHabilitadas() : List<Bodega>
    + Crear(bodega : Bodega) : int
  }

  class StockBLL {
    - _dal : StockDAL
    + RegistrarEntrada(mov : MovimientoStock) : void
    + RegistrarSalida(mov : MovimientoStock) : void
    + ObtenerStockActual(vinoId : int) : int
    + ListarKardex(vinoId : int) : List<MovimientoStock>
    + ListarBajoStockMinimo() : List<Vino>
  }

  VinoBLL --> VinoDAL
  BodegaBLL --> BodegaDAL
  StockBLL --> StockDAL
}

' ─────────────────────────────────────────
' CAPA DAL
' ─────────────────────────────────────────
package "DAL" #E8E8F4 {

  class Acceso <<existente>> {
    + Leer(sp : string, params : List<SqlParameter>?) : DataTable
    + Escribir(sp : string, params : List<SqlParameter>?) : int
  }

  class VinoDAL {
    - _acceso : Acceso
    + Insertar(vino : Vino) : int
    + ExisteCodigo(codigo : string) : bool
    + Autorizar(vinoId : int, administradorId : int) : void
    + SolicitarBaja(vinoId : int, solicitanteId : int) : void
    + AutorizarBaja(vinoId : int, administradorId : int) : void
    + ListarPublicados() : List<Vino>
    + ListarPendientes() : List<Vino>
    + ListarPendientesDeBaja() : List<Vino>
    + ObtenerPorId(id : int) : Vino
  }

  class BodegaDAL {
    - _acceso : Acceso
    + ListarHabilitadas() : List<Bodega>
    + Insertar(bodega : Bodega) : int
  }

  class StockDAL {
    - _acceso : Acceso
    + Insertar(mov : MovimientoStock) : void
    + ObtenerStockActual(vinoId : int) : int
    + ListarPorVino(vinoId : int) : List<MovimientoStock>
    + ListarBajoStockMinimo() : List<Vino>
  }

  VinoDAL --> Acceso
  BodegaDAL --> Acceso
  StockDAL --> Acceso
}

' ─────────────────────────────────────────
' CAPA CAPAS (presentación)
' ─────────────────────────────────────────
package "CAPAS" #F4E8E8 {

  class frmCatalogoVinos {
    + ActualizarIdioma() : void
  }
  class frmNuevoVino {
    + ActualizarIdioma() : void
  }
  class frmAutorizarVinos {
    + ActualizarIdioma() : void
  }
  class frmMovimientoStock {
    + ActualizarIdioma() : void
  }
  class frmKardexVino {
    + ActualizarIdioma() : void
  }
  class frmAlertaStockMinimo {
    + ActualizarIdioma() : void
  }

  frmCatalogoVinos    --> VinoBLL
  frmNuevoVino         --> VinoBLL
  frmNuevoVino         --> BodegaBLL
  frmAutorizarVinos    --> VinoBLL
  frmMovimientoStock   --> StockBLL
  frmKardexVino        --> StockBLL
  frmAlertaStockMinimo --> StockBLL
}

@enduml
